
AMI
------------------
 * New DeviceStateChanged and PresenceStateChanged AMI events have been added.
   These events are emitted whenever a device state or presence state change
   occurs. The events are controlled by res_manager_device_state.so and
   res_manager_presence_state.so. If the high frequency of these events is
   problematic for you, do not load these modules.

chan_dahdi
------------------
 * SS7 support now requires libss7 v2.0 or later.

 * Added SS7 support for connected line and redirecting.

 * Most SS7 CLI commands are reworked as well as new SS7 commands added.
   See online CLI help.

 * Added several SS7 config option parameters described in
   chan_dahdi.conf.sample.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.3.0 to Asterisk 12.4.0 ------------
------------------------------------------------------------------------------

AgentRequest
------------------
 * Returns new AGENT_STATUS value "NOT_CONNECTED" if the agent fails to
   connect with an incoming caller after being alerted to the presence
   of the incoming caller.  The most likely reason this would happen is
   the agent did not acknowledge the call in time.

AMI
------------------
 * New events have been added for the TALK_DETECT function. When the function
   is used on a channel, ChannelTalkingStart/ChannelTalkingStop events will be
   emitted to connected AMI clients indicating the start/stop of talking on
   the channel.

ARI
------------------
 * New event models have been aded for the TALK_DETECT function. When the
   function is used on a channel, ChannelTalkingStarted/ChannelTalkingFinished
   events will be emitted to connected WebSockets subscribed to the channel,
   indicating the start/stop of talking on the channel.

Functions
------------------
 * A new function, TALK_DETECT, has been added. When set on a channel, this